@@ -147,8 +147,6 @@ val split_inside_tac = Splitter.split_inside_tac;
 
 val op addsplits     = Splitter.addsplits;
 val op delsplits     = Splitter.delsplits;
-val Addsplits        = Splitter.Addsplits;
-val Delsplits        = Splitter.Delsplits;
 
 
 (* integration of simplifier with classical reasoner *)
